added docker compose networks

--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -9,4 +9,10 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./data/caddy:/data/caddy
+      - ./data/caddy:/data/caddy\
+    networks:
+      - proxy_network
+
+networks:
+  proxy_network:
+    external: true
